[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Towers/TowerMenu.gd" type="Script" id=1]

[node name="TowerMenu" type="PopupMenu"]
visible = true
margin_right = 250.0
margin_bottom = 225.0
popup_exclusive = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 236.0
margin_bottom = 211.0

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_right = 236.0
margin_bottom = 86.0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerStatsLabel" type="Label" parent="MarginContainer/MainContainer/StatsContainer"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Tower Stats"
align = 1

[node name="FireRateContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/StatsContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 38.0

[node name="FireRateBtn" type="Button" parent="MarginContainer/MainContainer/StatsContainer/FireRateContainer"]
margin_right = 20.0
margin_bottom = 20.0
focus_mode = 1
size_flags_vertical = 4
enabled_focus_mode = 1
text = "+"

[node name="FireRateDesc" type="Label" parent="MarginContainer/MainContainer/StatsContainer/FireRateContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 122.0
margin_bottom = 17.0
mouse_filter = 1
size_flags_horizontal = 4
text = "Fire Rate (Lvl.1)"

[node name="FireRateCostLabel" type="Label" parent="MarginContainer/MainContainer/StatsContainer/FireRateContainer"]
margin_left = 126.0
margin_top = 3.0
margin_right = 158.0
margin_bottom = 17.0
text = "Cost:"

[node name="FireRangeContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/StatsContainer"]
margin_top = 42.0
margin_right = 236.0
margin_bottom = 62.0

[node name="FireRangeBtn" type="Button" parent="MarginContainer/MainContainer/StatsContainer/FireRangeContainer"]
margin_right = 20.0
margin_bottom = 20.0
focus_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 1
text = "+"

[node name="FireRangeDesc" type="Label" parent="MarginContainer/MainContainer/StatsContainer/FireRangeContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
text = "Fire Range (Lvl.1)"

[node name="FireRangeCostLabel" type="Label" parent="MarginContainer/MainContainer/StatsContainer/FireRangeContainer"]
margin_left = 136.0
margin_top = 3.0
margin_right = 168.0
margin_bottom = 17.0
text = "Cost:"

[node name="ProjectileContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/StatsContainer"]
margin_top = 66.0
margin_right = 236.0
margin_bottom = 86.0

[node name="ProjectileBtn" type="Button" parent="MarginContainer/MainContainer/StatsContainer/ProjectileContainer"]
margin_right = 20.0
margin_bottom = 20.0
focus_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 1
text = "+"

[node name="ProjectileDesc" type="Label" parent="MarginContainer/MainContainer/StatsContainer/ProjectileContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 127.0
margin_bottom = 17.0
text = "Projectile (Lvl.1)"

[node name="ProjectileCostLabel" type="Label" parent="MarginContainer/MainContainer/StatsContainer/ProjectileContainer"]
margin_left = 131.0
margin_top = 3.0
margin_right = 163.0
margin_bottom = 17.0
text = "Cost:"

[node name="SettingsContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 90.0
margin_right = 236.0
margin_bottom = 128.0
size_flags_vertical = 4
alignment = 1

[node name="TowerSettingsLabel" type="Label" parent="MarginContainer/MainContainer/SettingsContainer"]
margin_left = 71.0
margin_right = 164.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Tower Settings"
align = 1

[node name="FireModeContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/SettingsContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 38.0

[node name="FireModeLabel" type="Label" parent="MarginContainer/MainContainer/SettingsContainer/FireModeContainer"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Fire Mode:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireMode1Btn" type="Button" parent="MarginContainer/MainContainer/SettingsContainer/FireModeContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
toggle_mode = true
text = "1"

[node name="FireMode2Btn" type="Button" parent="MarginContainer/MainContainer/SettingsContainer/FireModeContainer"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
toggle_mode = true
text = "2"

[node name="FireMode3Btn" type="Button" parent="MarginContainer/MainContainer/SettingsContainer/FireModeContainer"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
toggle_mode = true
text = "3"

[node name="CloseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = -9.99998
focus_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseLabel" type="Label" parent="CloseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/MainContainer/StatsContainer/FireRateContainer/FireRateBtn" to="." method="_on_FireRateBtn_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/StatsContainer/FireRangeContainer/FireRangeBtn" to="." method="_on_FireRangeBtn_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/StatsContainer/ProjectileContainer/ProjectileBtn" to="." method="_on_ProjectileBtn_pressed"]
[connection signal="toggled" from="MarginContainer/MainContainer/SettingsContainer/FireModeContainer/FireMode1Btn" to="." method="_on_FireMode1Btn_toggled"]
[connection signal="toggled" from="MarginContainer/MainContainer/SettingsContainer/FireModeContainer/FireMode2Btn" to="." method="_on_FireMode2Btn_toggled"]
[connection signal="toggled" from="MarginContainer/MainContainer/SettingsContainer/FireModeContainer/FireMode3Btn" to="." method="_on_FireMode3Btn_toggled"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
